4/18/2008
	- The prior change to allow creating Zones from AXFR-style IXFR
	  ZoneTransferIn responses didn't work.
	- Update the service provider to work with Java 1.6 and earlier
	  versions. (patch from <thelian@users.sourceforge.net>)

2/19/2008
	- The Zone.removeRecord() method threw an exception if there were no
	  other records in the same RRset.
	  (reported by Yoyo Chen <yoyochen@sinter.com.tw>)

	- Parsing and formatting LOC records should not depend on the current
	  locale. (reported by Klaus Malorny <Klaus.Malorny@knipp.de>)

1/31/2008
	- When converting messages to wire format, don't include name
	  compression pointers greater than 2^14 - 1.
	  (reported by Carole Gill <cgill@silverspringnet.com>)

1/24/2008
	- 2.0.6 released

1/22/2008
	- Fix an off-by-2 error that could cause an infinite loop when
	  parsing a Name with a self-referential compression pointer.
	  (reported by Carole Gill <cgill@silverspringnet.com>)

	- Raise an exception when an invalid label type is seen in a wire
	  format name.  The previous behavior would incorrectly parse invalid
	  names, and could lead to infinite loops.
	  (reported by Carole Gill <cgill@silverspringnet.com>)

8/28/2007
	- 2.0.5 released
	- Add the ZoneTransferIn.setLocalAddress() method.  (based on a patch
	  from <mpugge@users.sourceforge.net>)
	- Build jar file with -source and -target options to provide
	  compatibility with older Java releases (that is, revert to
	  pre-2.0.4 behavior).
	  (reported by Stefano Bagnara <apache@bago.org>)

8/26/2007
	- 2.0.4 released
	- Update SPI code to work with java 6.
	- Fix an argument parsing bug in the dig program, where failure to
	  specify both type and class would cause the specified server to
	  be ignored.
	  (reported by Stefano Bagnara <bago75@users.sourceforge.net>)

6/12/2007
	- The SPFRecord constructors incorrectly created records whose
	  internal type field was TXT, not SPF.
	  (reported by Stefano Bagnara <bago75@users.sourceforge.net>)

3/7/2007